# PLN-Lyrics-Analyzer

./: .dockerignore  .gitignore  CNAME  Dockerfile  index.html  pyproject.toml  requirements.txt
backend/: analyzer.py  app.py  genius.py  lyrics.py  requirements.txt  spotify.py
backend/static/: index.html
